fixing z-index of float container (require after making the navbar fixed)

--- a/src/Components/Common/App/App.less
+++ b/src/Components/Common/App/App.less
@@ -11,7 +11,7 @@
     top: 0;
     width: 100%;
     text-align: center;
-    z-index: 1000;
+    z-index: @zindex-navbar-fixed + 1;
     background: none;
     pointer-events: none;
   }
